# add_subdirectory(client)
# add_subdirectory(server)
# add_subdirectory(playServer)
# add_subdirectory(push)
# add_subdirectory(worker)
# add_subdirectory(sink)
# add_subdirectory(reqRepAgent)
# add_subdirectory(repServer)
# add_subdirectory(reqClient)
# add_subdirectory(mutitreadServer)
# add_subdirectory(mutitreadServer2)

file(GLOB AllFile *)

foreach(var ${AllFile})
if(IS_DIRECTORY ${var})
file(RELATIVE_PATH RelativePath ${CMAKE_CURRENT_SOURCE_DIR} ${var})
add_subdirectory(${RelativePath})
endif()
endforeach()
